fix: overlapping text in experience section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -406,8 +406,12 @@ footer {
     content: "⬇";
   }
 
+  .project_main {
+    height: 150vh;
+  }
+
   .main {
-    height: calc(100vh + 96px);
+    height: calc(100vh - 96px);
   }
 
   .center {
